proj_& assign/c++_java_syntex analyser_project6/c++_java_syntex analyser_project6/java/java.output
Terminals unused in grammar

   BYVALUE
   CAST
   CONST
   FUTURE
   GENERIC
   GOTO
   INNER
   OPERATOR
   OUTER
   REST
   VAR


State 28 conflicts: 15 reduce/reduce
State 50 conflicts: 14 reduce/reduce
State 202 conflicts: 41 reduce/reduce
State 441 conflicts: 1 shift/reduce


Grammar

    0 $accept: CompilationUnit $end

    1 TypeSpecifier: TypeName
    2              | TypeName Dims

    3 TypeName: PrimitiveType
    4         | QualifiedName

    5 ClassNameList: QualifiedName
    6              | ClassNameList ',' QualifiedName

    7 PrimitiveType: BOOLEAN
    8              | CHAR
    9              | BYTE
   10              | SHORT
   11              | INT
   12              | LONG
   13              | FLOAT
   14              | DOUBLE
   15              | VOID

   16 SemiColons: ';'
   17           | SemiColons ';'

   18 CompilationUnit: ProgramFile

   19 ProgramFile: PackageStatement ImportStatements TypeDeclarations
   20            | PackageStatement ImportStatements
   21            | PackageStatement TypeDeclarations
   22            | ImportStatements TypeDeclarations
   23            | PackageStatement
   24            | ImportStatements
   25            | TypeDeclarations

   26 PackageStatement: PACKAGE QualifiedName SemiColons
   27                 | error ';'

   28 TypeDeclarations: TypeDeclarationOptSemi
   29                 | TypeDeclarations TypeDeclarationOptSemi

   30 TypeDeclarationOptSemi: TypeDeclaration
   31                       | TypeDeclaration SemiColons
   32                       | error ';'

   33 ImportStatements: ImportStatement
   34                 | ImportStatements ImportStatement

   35 ImportStatement: IMPORT QualifiedName SemiColons
   36                | IMPORT QualifiedName '.' '*' SemiColons
   37                | error ';'

   38 QualifiedName: IDENTIFIER
   39              | QualifiedName '.' IDENTIFIER

   40 TypeDeclaration: ClassHeader '{' FieldDeclarations '}'
   41                | ClassHeader '{' '}'

   42 ClassHeader: Modifiers ClassWord IDENTIFIER Extends Interfaces
   43            | Modifiers ClassWord IDENTIFIER Extends
   44            | Modifiers ClassWord IDENTIFIER Interfaces
   45            | ClassWord IDENTIFIER Extends Interfaces
   46            | Modifiers ClassWord IDENTIFIER
   47            | ClassWord IDENTIFIER Extends
   48            | ClassWord IDENTIFIER Interfaces
   49            | ClassWord IDENTIFIER

   50 Modifiers: Modifier
   51          | Modifiers Modifier

   52 Modifier: ABSTRACT
   53         | FINAL
   54         | PUBLIC
   55         | PROTECTED
   56         | PRIVATE
   57         | STATIC
   58         | TRANSIENT
   59         | VOLATILE
   60         | NATIVE
   61         | SYNCHRONIZED

   62 ClassWord: CLASS
   63          | INTERFACE

   64 Interfaces: IMPLEMENTS ClassNameList

   65 FieldDeclarations: FieldDeclarationOptSemi
   66                  | FieldDeclarations FieldDeclarationOptSemi

   67 FieldDeclarationOptSemi: FieldDeclaration
   68                        | FieldDeclaration SemiColons
   69                        | error ';'

   70 FieldDeclaration: FieldVariableDeclaration ';'
   71                 | MethodDeclaration
   72                 | ConstructorDeclaration
   73                 | StaticInitializer
   74                 | NonStaticInitializer
   75                 | TypeDeclaration

   76 FieldVariableDeclaration: Modifiers TypeSpecifier VariableDeclarators
   77                         | TypeSpecifier VariableDeclarators

   78 VariableDeclarators: VariableDeclarator
   79                    | VariableDeclarators ',' VariableDeclarator

   80 VariableDeclarator: DeclaratorName
   81                   | DeclaratorName '=' VariableInitializer

   82 VariableInitializer: Expression
   83                    | '{' '}'
   84                    | '{' ArrayInitializers '}'

   85 ArrayInitializers: VariableInitializer
   86                  | ArrayInitializers ',' VariableInitializer
   87                  | ArrayInitializers ','

   88 MethodDeclaration: Modifiers TypeSpecifier MethodDeclarator Throws MethodBody
   89                  | Modifiers TypeSpecifier MethodDeclarator MethodBody
   90                  | TypeSpecifier MethodDeclarator Throws MethodBody
   91                  | TypeSpecifier MethodDeclarator MethodBody

   92 MethodDeclarator: DeclaratorName '(' ParameterList ')'
   93                 | DeclaratorName '(' ')'
   94                 | MethodDeclarator OP_DIM

   95 ParameterList: Parameter
   96              | ParameterList ',' Parameter

   97 Parameter: TypeSpecifier DeclaratorName
   98          | FINAL TypeSpecifier DeclaratorName

   99 DeclaratorName: IDENTIFIER
  100               | DeclaratorName OP_DIM

  101 Throws: THROWS ClassNameList

  102 MethodBody: Block
  103           | ';'

  104 ConstructorDeclaration: Modifiers ConstructorDeclarator Throws Block
  105                       | Modifiers ConstructorDeclarator Block
  106                       | ConstructorDeclarator Throws Block
  107                       | ConstructorDeclarator Block

  108 ConstructorDeclarator: IDENTIFIER '(' ParameterList ')'
  109                      | IDENTIFIER '(' ')'

  110 StaticInitializer: STATIC Block

  111 NonStaticInitializer: Block

  112 Extends: EXTENDS TypeName
  113        | Extends ',' TypeName

  114 Block: '{' LocalVariableDeclarationsAndStatements '}'
  115      | '{' '}'

  116 LocalVariableDeclarationsAndStatements: LocalVariableDeclarationOrStatement
  117                                       | LocalVariableDeclarationsAndStatements LocalVariableDeclarationOrStatement

  118 LocalVariableDeclarationOrStatement: LocalVariableDeclarationStatement
  119                                    | Statement

  120 LocalVariableDeclarationStatement: TypeSpecifier VariableDeclarators ';'
  121                                  | FINAL TypeSpecifier VariableDeclarators ';'
  122                                  | error ';'

  123 Statement: EmptyStatement
  124          | LabelStatement
  125          | ExpressionStatement ';'
  126          | SelectionStatement
  127          | IterationStatement
  128          | JumpStatement
  129          | GuardingStatement
  130          | Block
  131          | error ';'

  132 EmptyStatement: ';'

  133 LabelStatement: IDENTIFIER ':'
  134               | CASE ConstantExpression ':'
  135               | DEFAULT ':'

  136 ExpressionStatement: Expression

  137 SelectionStatement: IF '(' Expression ')' Statement
  138                   | IF '(' Expression ')' Statement ELSE Statement
  139                   | SWITCH '(' Expression ')' Block

  140 IterationStatement: WHILE '(' Expression ')' Statement
  141                   | DO Statement WHILE '(' Expression ')' ';'
  142                   | FOR '(' ForInit ForExpr ForIncr ')' Statement
  143                   | FOR '(' ForInit ForExpr ')' Statement

  144 ForInit: ExpressionStatements ';'
  145        | LocalVariableDeclarationStatement
  146        | ';'

  147 ForExpr: Expression ';'
  148        | ';'

  149 ForIncr: ExpressionStatements

  150 ExpressionStatements: ExpressionStatement
  151                     | ExpressionStatements ',' ExpressionStatement

  152 JumpStatement: BREAK IDENTIFIER ';'
  153              | BREAK ';'
  154              | CONTINUE IDENTIFIER ';'
  155              | CONTINUE ';'
  156              | RETURN Expression ';'
  157              | RETURN ';'
  158              | THROW Expression ';'

  159 GuardingStatement: SYNCHRONIZED '(' Expression ')' Statement
  160                  | TRY Block Finally
  161                  | TRY Block Catches
  162                  | TRY Block Catches Finally

  163 Catches: Catch
  164        | Catches Catch

  165 Catch: CatchHeader Block

  166 CatchHeader: CATCH '(' TypeSpecifier IDENTIFIER ')'
  167            | CATCH '(' TypeSpecifier ')'

  168 Finally: FINALLY Block

  169 PrimaryExpression: QualifiedName
  170                  | NotJustName

  171 NotJustName: SpecialName
  172            | NewAllocationExpression
  173            | ComplexPrimary

  174 ComplexPrimary: '(' Expression ')'
  175               | ComplexPrimaryNoParenthesis

  176 ComplexPrimaryNoParenthesis: LITERAL
  177                            | BOOLLIT
  178                            | ArrayAccess
  179                            | FieldAccess
  180                            | MethodCall

  181 ArrayAccess: QualifiedName '[' Expression ']'
  182            | ComplexPrimary '[' Expression ']'

  183 FieldAccess: NotJustName '.' IDENTIFIER
  184            | RealPostfixExpression '.' IDENTIFIER
  185            | QualifiedName '.' THIS
  186            | QualifiedName '.' CLASS
  187            | PrimitiveType '.' CLASS

  188 MethodCall: MethodAccess '(' ArgumentList ')'
  189           | MethodAccess '(' ')'

  190 MethodAccess: ComplexPrimaryNoParenthesis
  191             | SpecialName
  192             | QualifiedName

  193 SpecialName: THIS
  194            | SUPER
  195            | JNULL

  196 ArgumentList: Expression
  197             | ArgumentList ',' Expression

  198 NewAllocationExpression: PlainNewAllocationExpression
  199                        | QualifiedName '.' PlainNewAllocationExpression

  200 PlainNewAllocationExpression: ArrayAllocationExpression
  201                             | ClassAllocationExpression
  202                             | ArrayAllocationExpression '{' '}'
  203                             | ClassAllocationExpression '{' '}'
  204                             | ArrayAllocationExpression '{' ArrayInitializers '}'
  205                             | ClassAllocationExpression '{' FieldDeclarations '}'

  206 ClassAllocationExpression: NEW TypeName '(' ArgumentList ')'
  207                          | NEW TypeName '(' ')'

  208 ArrayAllocationExpression: NEW TypeName DimExprs Dims
  209                          | NEW TypeName DimExprs
  210                          | NEW TypeName Dims

  211 DimExprs: DimExpr
  212         | DimExprs DimExpr

  213 DimExpr: '[' Expression ']'

  214 Dims: OP_DIM
  215     | Dims OP_DIM

  216 PostfixExpression: PrimaryExpression
  217                  | RealPostfixExpression

  218 RealPostfixExpression: PostfixExpression OP_INC
  219                      | PostfixExpression OP_DEC

  220 UnaryExpression: OP_INC UnaryExpression
  221                | OP_DEC UnaryExpression
  222                | ArithmeticUnaryOperator CastExpression
  223                | LogicalUnaryExpression

  224 LogicalUnaryExpression: PostfixExpression
  225                       | LogicalUnaryOperator UnaryExpression

  226 LogicalUnaryOperator: '~'
  227                     | '!'

  228 ArithmeticUnaryOperator: '+'
  229                        | '-'

  230 CastExpression: UnaryExpression
  231               | '(' PrimitiveTypeExpression ')' CastExpression
  232               | '(' ClassTypeExpression ')' CastExpression
  233               | '(' Expression ')' LogicalUnaryExpression

  234 PrimitiveTypeExpression: PrimitiveType
  235                        | PrimitiveType Dims

  236 ClassTypeExpression: QualifiedName Dims

  237 MultiplicativeExpression: CastExpression
  238                         | MultiplicativeExpression '*' CastExpression
  239                         | MultiplicativeExpression '/' CastExpression
  240                         | MultiplicativeExpression '%' CastExpression

  241 AdditiveExpression: MultiplicativeExpression
  242                   | AdditiveExpression '+' MultiplicativeExpression
  243                   | AdditiveExpression '-' MultiplicativeExpression

  244 ShiftExpression: AdditiveExpression
  245                | ShiftExpression OP_SHL AdditiveExpression
  246                | ShiftExpression OP_SHR AdditiveExpression
  247                | ShiftExpression OP_SHRR AdditiveExpression

  248 RelationalExpression: ShiftExpression
  249                     | RelationalExpression '<' ShiftExpression
  250                     | RelationalExpression '>' ShiftExpression
  251                     | RelationalExpression OP_LE ShiftExpression
  252                     | RelationalExpression OP_GE ShiftExpression
  253                     | RelationalExpression INSTANCEOF TypeSpecifier

  254 EqualityExpression: RelationalExpression
  255                   | EqualityExpression OP_EQ RelationalExpression
  256                   | EqualityExpression OP_NE RelationalExpression

  257 AndExpression: EqualityExpression
  258              | AndExpression '&' EqualityExpression

  259 ExclusiveOrExpression: AndExpression
  260                      | ExclusiveOrExpression '^' AndExpression

  261 InclusiveOrExpression: ExclusiveOrExpression
  262                      | InclusiveOrExpression '|' ExclusiveOrExpression

  263 ConditionalAndExpression: InclusiveOrExpression
  264                         | ConditionalAndExpression OP_LAND InclusiveOrExpression

  265 ConditionalOrExpression: ConditionalAndExpression
  266                        | ConditionalOrExpression OP_LOR ConditionalAndExpression

  267 ConditionalExpression: ConditionalOrExpression
  268                      | ConditionalOrExpression '?' Expression ':' ConditionalExpression

  269 AssignmentExpression: ConditionalExpression
  270                     | UnaryExpression AssignmentOperator AssignmentExpression

  271 AssignmentOperator: '='
  272                   | ASS_MUL
  273                   | ASS_DIV
  274                   | ASS_MOD
  275                   | ASS_ADD
  276                   | ASS_SUB
  277                   | ASS_SHL
  278                   | ASS_SHR
  279                   | ASS_SHRR
  280                   | ASS_AND
  281                   | ASS_XOR
  282                   | ASS_OR

  283 Expression: AssignmentExpression

  284 ConstantExpression: ConditionalExpression


Terminals, with rules where they appear

$end (0) 0
'!' (33) 227
'%' (37) 240
'&' (38) 258
'(' (40) 92 93 108 109 137 138 139 140 141 142 143 159 166 167 174
    188 189 206 207 231 232 233
')' (41) 92 93 108 109 137 138 139 140 141 142 143 159 166 167 174
    188 189 206 207 231 232 233
'*' (42) 36 238
'+' (43) 228 242
',' (44) 6 79 86 87 96 113 151 197
'-' (45) 229 243
'.' (46) 36 39 183 184 185 186 187 199
'/' (47) 239
':' (58) 133 134 135 268
';' (59) 16 17 27 32 37 69 70 103 120 121 122 125 131 132 141 144 146
    147 148 152 153 154 155 156 157 158
'<' (60) 249
'=' (61) 81 271
'>' (62) 250
'?' (63) 268
'[' (91) 181 182 213
']' (93) 181 182 213
'^' (94) 260
'{' (123) 40 41 83 84 114 115 202 203 204 205
'|' (124) 262
'}' (125) 40 41 83 84 114 115 202 203 204 205
'~' (126) 226
error (256) 27 32 37 69 122 131
ABSTRACT (258) 52
BOOLEAN (259) 7
BREAK (260) 152 153
BYTE (261) 9
BYVALUE (262)
CASE (263) 134
CAST (264)
CATCH (265) 166 167
CHAR (266) 8
CLASS (267) 62 186 187
CONST (268)
CONTINUE (269) 154 155
DEFAULT (270) 135
DO (271) 141
DOUBLE (272) 14
ELSE (273) 138
EXTENDS (274) 112
FINAL (275) 53 98 121
FINALLY (276) 168
FLOAT (277) 13
FOR (278) 142 143
FUTURE (279)
GENERIC (280)
GOTO (281)
IF (282) 137 138
IMPLEMENTS (283) 64
IMPORT (284) 35 36
INNER (285)
INSTANCEOF (286) 253
INT (287) 11
INTERFACE (288) 63
LONG (289) 12
NATIVE (290) 60
NEW (291) 206 207 208 209 210
JNULL (292) 195
OPERATOR (293)
OUTER (294)
PACKAGE (295) 26
PRIVATE (296) 56
PROTECTED (297) 55
PUBLIC (298) 54
REST (299)
RETURN (300) 156 157
SHORT (301) 10
STATIC (302) 57 110
SUPER (303) 194
SWITCH (304) 139
SYNCHRONIZED (305) 61 159
THIS (306) 185 193
THROW (307) 158
THROWS (308) 101
TRANSIENT (309) 58
TRY (310) 160 161 162
VAR (311)
VOID (312) 15
VOLATILE (313) 59
WHILE (314) 140 141
OP_INC (315) 218 220
OP_DEC (316) 219 221
OP_SHL (317) 245
OP_SHR (318) 246
OP_SHRR (319) 247
OP_GE (320) 252
OP_LE (321) 251
OP_EQ (322) 255
OP_NE (323) 256
OP_LAND (324) 264
OP_LOR (325) 266
OP_DIM (326) 94 100 214 215
ASS_MUL (327) 272
ASS_DIV (328) 273
ASS_MOD (329) 274
ASS_ADD (330) 275
ASS_SUB (331) 276
ASS_SHL (332) 277
ASS_SHR (333) 278
ASS_SHRR (334) 279
ASS_AND (335) 280
ASS_XOR (336) 281
ASS_OR (337) 282
IDENTIFIER (338) 38 39 42 43 44 45 46 47 48 49 99 108 109 133 152 154
    166 183 184
LITERAL (339) 176
BOOLLIT (340) 177


Nonterminals, with rules where they appear

$accept (110)
    on left: 0
TypeSpecifier (111)
    on left: 1 2, on right: 76 77 88 89 90 91 97 98 120 121 166 167
    253
TypeName (112)
    on left: 3 4, on right: 1 2 112 113 206 207 208 209 210
ClassNameList (113)
    on left: 5 6, on right: 6 64 101
PrimitiveType (114)
    on left: 7 8 9 10 11 12 13 14 15, on right: 3 187 234 235
SemiColons (115)
    on left: 16 17, on right: 17 26 31 35 36 68
CompilationUnit (116)
    on left: 18, on right: 0
ProgramFile (117)
    on left: 19 20 21 22 23 24 25, on right: 18
PackageStatement (118)
    on left: 26 27, on right: 19 20 21 23
TypeDeclarations (119)
    on left: 28 29, on right: 19 21 22 25 29
TypeDeclarationOptSemi (120)
    on left: 30 31 32, on right: 28 29
ImportStatements (121)
    on left: 33 34, on right: 19 20 22 24 34
ImportStatement (122)
    on left: 35 36 37, on right: 33 34
QualifiedName (123)
    on left: 38 39, on right: 4 5 6 26 35 36 39 169 181 185 186 192
    199 236
TypeDeclaration (124)
    on left: 40 41, on right: 30 31 75
ClassHeader (125)
    on left: 42 43 44 45 46 47 48 49, on right: 40 41
Modifiers (126)
    on left: 50 51, on right: 42 43 44 46 51 76 88 89 104 105
Modifier (127)
    on left: 52 53 54 55 56 57 58 59 60 61, on right: 50 51
ClassWord (128)
    on left: 62 63, on right: 42 43 44 45 46 47 48 49
Interfaces (129)
    on left: 64, on right: 42 44 45 48
FieldDeclarations (130)
    on left: 65 66, on right: 40 66 205
FieldDeclarationOptSemi (131)
    on left: 67 68 69, on right: 65 66
FieldDeclaration (132)
    on left: 70 71 72 73 74 75, on right: 67 68
FieldVariableDeclaration (133)
    on left: 76 77, on right: 70
VariableDeclarators (134)
    on left: 78 79, on right: 76 77 79 120 121
VariableDeclarator (135)
    on left: 80 81, on right: 78 79
VariableInitializer (136)
    on left: 82 83 84, on right: 81 85 86
ArrayInitializers (137)
    on left: 85 86 87, on right: 84 86 87 204
MethodDeclaration (138)
    on left: 88 89 90 91, on right: 71
MethodDeclarator (139)
    on left: 92 93 94, on right: 88 89 90 91 94
ParameterList (140)
    on left: 95 96, on right: 92 96 108
Parameter (141)
    on left: 97 98, on right: 95 96
DeclaratorName (142)
    on left: 99 100, on right: 80 81 92 93 97 98 100
Throws (143)
    on left: 101, on right: 88 90 104 106
MethodBody (144)
    on left: 102 103, on right: 88 89 90 91
ConstructorDeclaration (145)
    on left: 104 105 106 107, on right: 72
ConstructorDeclarator (146)
    on left: 108 109, on right: 104 105 106 107
StaticInitializer (147)
    on left: 110, on right: 73
NonStaticInitializer (148)
    on left: 111, on right: 74
Extends (149)
    on left: 112 113, on right: 42 43 45 47 113
Block (150)
    on left: 114 115, on right: 102 104 105 106 107 110 111 130 139
    160 161 162 165 168
LocalVariableDeclarationsAndStatements (151)
    on left: 116 117, on right: 114 117
LocalVariableDeclarationOrStatement (152)
    on left: 118 119, on right: 116 117
LocalVariableDeclarationStatement (153)
    on left: 120 121 122, on right: 118 145
Statement (154)
    on left: 123 124 125 126 127 128 129 130 131, on right: 119 137
    138 140 141 142 143 159
EmptyStatement (155)
    on left: 132, on right: 123
LabelStatement (156)
    on left: 133 134 135, on right: 124
ExpressionStatement (157)
    on left: 136, on right: 125 150 151
SelectionStatement (158)
    on left: 137 138 139, on right: 126
IterationStatement (159)
    on left: 140 141 142 143, on right: 127
ForInit (160)
    on left: 144 145 146, on right: 142 143
ForExpr (161)
    on left: 147 148, on right: 142 143
ForIncr (162)
    on left: 149, on right: 142
ExpressionStatements (163)
    on left: 150 151, on right: 144 149 151
JumpStatement (164)
    on left: 152 153 154 155 156 157 158, on right: 128
GuardingStatement (165)
    on left: 159 160 161 162, on right: 129
Catches (166)
    on left: 163 164, on right: 161 162 164
Catch (167)
    on left: 165, on right: 163 164
CatchHeader (168)
    on left: 166 167, on right: 165
Finally (169)
    on left: 168, on right: 160 162
PrimaryExpression (170)
    on left: 169 170, on right: 216
NotJustName (171)
    on left: 171 172 173, on right: 170 183
ComplexPrimary (172)
    on left: 174 175, on right: 173 182
ComplexPrimaryNoParenthesis (173)
    on left: 176 177 178 179 180, on right: 175 190
ArrayAccess (174)
    on left: 181 182, on right: 178
FieldAccess (175)
    on left: 183 184 185 186 187, on right: 179
MethodCall (176)
    on left: 188 189, on right: 180
MethodAccess (177)
    on left: 190 191 192, on right: 188 189
SpecialName (178)
    on left: 193 194 195, on right: 171 191
ArgumentList (179)
    on left: 196 197, on right: 188 197 206
NewAllocationExpression (180)
    on left: 198 199, on right: 172
PlainNewAllocationExpression (181)
    on left: 200 201 202 203 204 205, on right: 198 199
ClassAllocationExpression (182)
    on left: 206 207, on right: 201 203 205
ArrayAllocationExpression (183)
    on left: 208 209 210, on right: 200 202 204
DimExprs (184)
    on left: 211 212, on right: 208 209 212
DimExpr (185)
    on left: 213, on right: 211 212
Dims (186)
    on left: 214 215, on right: 2 208 210 215 235 236
PostfixExpression (187)
    on left: 216 217, on right: 218 219 224
RealPostfixExpression (188)
    on left: 218 219, on right: 184 217
UnaryExpression (189)
    on left: 220 221 222 223, on right: 220 221 225 230 270
LogicalUnaryExpression (190)
    on left: 224 225, on right: 223 233
LogicalUnaryOperator (191)
    on left: 226 227, on right: 225
ArithmeticUnaryOperator (192)
    on left: 228 229, on right: 222
CastExpression (193)
    on left: 230 231 232 233, on right: 222 231 232 237 238 239 240
PrimitiveTypeExpression (194)
    on left: 234 235, on right: 231
ClassTypeExpression (195)
    on left: 236, on right: 232
MultiplicativeExpression (196)
    on left: 237 238 239 240, on right: 238 239 240 241 242 243
AdditiveExpression (197)
    on left: 241 242 243, on right: 242 243 244 245 246 247
ShiftExpression (198)
    on left: 244 245 246 247, on right: 245 246 247 248 249 250 251
    252
RelationalExpression (199)
    on left: 248 249 250 251 252 253, on right: 249 250 251 252 253
    254 255 256
EqualityExpression (200)
    on left: 254 255 256, on right: 255 256 257 258
AndExpression (201)
    on left: 257 258, on right: 258 259 260
ExclusiveOrExpression (202)
    on left: 259 260, on right: 260 261 262
InclusiveOrExpression (203)
    on left: 261 262, on right: 262 263 264
ConditionalAndExpression (204)
    on left: 263 264, on right: 264 265 266
ConditionalOrExpression (205)
    on left: 265 266, on right: 266 267 268
ConditionalExpression (206)
    on left: 267 268, on right: 268 269 284
AssignmentExpression (207)
    on left: 269 270, on right: 270 283
AssignmentOperator (208)
    on left: 271 272 273 274 275 276 277 278 279 280 281 282, on right:
    270
Expression (209)
    on left: 283, on right: 82 136 137 138 139 140 141 147 156 158
    159 174 181 182 196 197 213 233 268
ConstantExpression (210)
    on left: 284, on right: 134


state 0

    0 $accept: . CompilationUnit $end

    error         shift, and go to state 1
    ABSTRACT      shift, and go to state 2
    CLASS         shift, and go to state 3
    FINAL         shift, and go to state 4
    IMPORT        shift, and go to state 5
    INTERFACE     shift, and go to state 6
    NATIVE        shift, and go to state 7
    PACKAGE       shift, and go to state 8
    PRIVATE       shift, and go to state 9
    PROTECTED     shift, and go to state 10
    PUBLIC        shift, and go to state 11
    STATIC        shift, and go to state 12
    SYNCHRONIZED  shift, and go to state 13
    TRANSIENT     shift, and go to state 14
    VOLATILE      shift, and go to state 15

    CompilationUnit         go to state 16
    ProgramFile             go to state 17
    PackageStatement        go to state 18
    TypeDeclarations        go to state 19
    TypeDeclarationOptSemi  go to state 20
    ImportStatements        go to state 21
    ImportStatement         go to state 22
    TypeDeclaration         go to state 23
    ClassHeader             go to state 24
    Modifiers               go to state 25
    Modifier                go to state 26
    ClassWord               go to state 27


state 1

   27 PackageStatement: error . ';'
   32 TypeDeclarationOptSemi: error . ';'
   37 ImportStatement: error . ';'

    ';'  shift, and go to state 28


state 2

   52 Modifier: ABSTRACT .

    $default  reduce using rule 52 (Modifier)


state 3

   62 ClassWord: CLASS .

    $default  reduce using rule 62 (ClassWord)


state 4

   53 Modifier: FINAL .

    $default  reduce using rule 53 (Modifier)


state 5

   35 ImportStatement: IMPORT . QualifiedName SemiColons
   36                | IMPORT . QualifiedName '.' '*' SemiColons

    IDENTIFIER  shift, and go to state 29

    QualifiedName  go to state 30


state 6

   63 ClassWord: INTERFACE .

    $default  reduce using rule 63 (ClassWord)


state 7

   60 Modifier: NATIVE .

    $default  reduce using rule 60 (Modifier)


state 8

   26 PackageStatement: PACKAGE . QualifiedName SemiColons

    IDENTIFIER  shift, and go to state 29

    QualifiedName  go to state 31


state 9

   56 Modifier: PRIVATE .

    $default  reduce using rule 56 (Modifier)


state 10

   55 Modifier: PROTECTED .

    $default  reduce using rule 55 (Modifier)


state 11

   54 Modifier: PUBLIC .

    $default  reduce using rule 54 (Modifier)


state 12

   57 Modifier: STATIC .

    $default  reduce using rule 57 (Modifier)


state 13

   61 Modifier: SYNCHRONIZED .

    $default  reduce using rule 61 (Modifier)


state 14

   58 Modifier: TRANSIENT .

    $default  reduce using rule 58 (Modifier)


state 15

   59 Modifier: VOLATILE .

    $default  reduce using rule 59 (Modifier)


state 16

    0 $accept: CompilationUnit . $end

    $end  shift, and go to state 32


state 17

   18 CompilationUnit: ProgramFile .

    $default  reduce using rule 18 (CompilationUnit)


state 18

   19 ProgramFile: PackageStatement . ImportStatements TypeDeclarations
   20            | PackageStatement . ImportStatements
   21            | PackageStatement . TypeDeclarations
   23            | PackageStatement .

    error         shift, and go to state 33
    ABSTRACT      shift, and go to state 2
    CLASS         shift, and go to state 3
    FINAL         shift, and go to state 4
    IMPORT        shift, and go to state 5
    INTERFACE     shift, and go to state 6
    NATIVE        shift, and go to state 7
    PRIVATE       shift, and go to state 9
    PROTECTED     shift, and go to state 10
    PUBLIC        shift, and go to state 11
    STATIC        shift, and go to state 12
    SYNCHRONIZED  shift, and go to state 13
    TRANSIENT     shift, and go to state 14
    VOLATILE      shift, and go to state 15

    $end  reduce using rule 23 (ProgramFile)

    TypeDeclarations        go to state 34
    TypeDeclarationOptSemi  go to state 20
    ImportStatements        go to state 35
    ImportStatement         go to state 22
    TypeDeclaration         go to state 23
    ClassHeader             go to state 24
    Modifiers               go to state 25
    Modifier                go to state 26
    ClassWord               go to state 27


state 19

   25 ProgramFile: TypeDeclarations .
   29 TypeDeclarations: TypeDeclarations . TypeDeclarationOptSemi

    error         shift, and go to state 36
    ABSTRACT      shift, and go to state 2
    CLASS         shift, and go to state 3
    FINAL         shift, and go to state 4
    INTERFACE     shift, and go to state 6
    NATIVE        shift, and go to state 7
    PRIVATE       shift, and go to state 9
    PROTECTED     shift, and go to state 10
    PUBLIC        shift, and go to state 11
    STATIC        shift, and go to state 12
    SYNCHRONIZED  shift, and go to state 13
    TRANSIENT     shift, and go to state 14
    VOLATILE      shift, and go to state 15

    $end  reduce using rule 25 (ProgramFile)

    TypeDeclarationOptSemi  go to state 37
    TypeDeclaration         go to state 23
    ClassHeader             go to state 24
    Modifiers               go to state 25
    Modifier                go to state 26
    ClassWord               go to state 27


state 20

   28 TypeDeclarations: TypeDeclarationOptSemi .

    $default  reduce using rule 28 (TypeDeclarations)


state 21

   22 ProgramFile: ImportStatements . TypeDeclarations
   24            | ImportStatements .
   34 ImportStatements: ImportStatements . ImportStatement

    error         shift, and go to state 33
    ABSTRACT      shift, and go to state 2
    CLASS         shift, and go to state 3
    FINAL         shift, and go to state 4
    IMPORT        shift, and go to state 5
    INTERFACE     shift, and go to state 6
    NATIVE        shift, and go to state 7
    PRIVATE       shift, and go to state 9
    PROTECTED     shift, and go to state 10
    PUBLIC        shift, and go to state 11
    STATIC        shift, and go to state 12
    SYNCHRONIZED  shift, and go to state 13
    TRANSIENT     shift, and go to state 14
    VOLATILE      shift, and go to state 15

    $end  reduce using rule 24 (ProgramFile)

    TypeDeclarations        go to state 38
    TypeDeclarationOptSemi  go to state 20
    ImportStatement         go to state 39
    TypeDeclaration         go to state 23
    ClassHeader             go to state 24
    Modifiers               go to state 25
    Modifier                go to state 26
    ClassWord               go to state 27


state 22

   33 ImportStatements: ImportStatement .

    $default  reduce using rule 33 (ImportStatements)


state 23

   30 TypeDeclarationOptSemi: TypeDeclaration .
   31                       | TypeDeclaration . SemiColons

    ';'  shift, and go to state 40

    $default  reduce using rule 30 (TypeDeclarationOptSemi)

    SemiColons  go to state 41


state 24

   40 TypeDeclaration: ClassHeader . '{' FieldDeclarations '}'
   41                | ClassHeader . '{' '}'

    '{'  shift, and go to state 42


state 25

   42 ClassHeader: Modifiers . ClassWord IDENTIFIER Extends Interfaces
   43            | Modifiers . ClassWord IDENTIFIER Extends
   44            | Modifiers . ClassWord IDENTIFIER Interfaces
   46            | Modifiers . ClassWord IDENTIFIER
   51 Modifiers: Modifiers . Modifier

    ABSTRACT      shift, and go to state 2
    CLASS         shift, and go to state 3
    FINAL         shift, and go to state 4
    INTERFACE     shift, and go to state 6
    NATIVE        shift, and go to state 7
    PRIVATE       shift, and go to state 9
    PROTECTED     shift, and go to state 10
    PUBLIC        shift, and go to state 11
    STATIC        shift, and go to state 12
    SYNCHRONIZED  shift, and go to state 13
    TRANSIENT     shift, and go to state 14
    VOLATILE      shift, and go to state 15

    Modifier   go to state 43
    ClassWord  go to state 44


state 26

   50 Modifiers: Modifier .

    $default  reduce using rule 50 (Modifiers)


state 27

   45 ClassHeader: ClassWord . IDENTIFIER Extends Interfaces
   47            | ClassWord . IDENTIFIER Extends
   48            | ClassWord . IDENTIFIER Interfaces
   49            | ClassWord . IDENTIFIER

    IDENTIFIER  shift, and go to state 45


state 28

   27 PackageStatement: error ';' .
   32 TypeDeclarationOptSemi: error ';' .
   37 ImportStatement: error ';' .
